# mycells

./: Cargo.toml  README.md  action.yml
doc/: syntax.md  template.md
src/: cell.rs  git.rs  main.rs  render.rs  server.rs  site.rs
templates/default/: page.html
test/example-cells/: 2026053101-atomic-notes.md  2026053102-linking-ideas.md  2026053103-writing-to-think.md  2026053104-spaced-repetition.md  2026053105-concept-maps.md  2026053106-rubber-duck-debugging.md  2026053107-deliberate-practice.md  2026053108-information-diet.md  2026053109-output-driven-learning.md  2026053110-cognitive-load.md  index.md
