[package]
name = "mycells-site"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
